# Research_finder

./: README.md  pyproject.toml
src/research_finder/: cli.py  fetch.py  parse.py
src/research_finder/results/: output.csv  output1.csv  results.csv  results_20250315_015448.csv
