[project]
name = "research-finder"
version = "0.1.0"
description = ""
authors = [
    {name = "Safiya",email = "safiyaateeq@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "xmltodict (>=0.14.2,<0.15.0)"

]

[tool.poetry]
packages = [{include = "research_finder", from = "src"}]


[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "research_finder.cli:main"
